--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,54 @@
+# .pre-commit-config.yaml
+# Installs common hooks to auto-format, lint and check metadata.
+# Adjust language_version and args to match your environment (e.g. python3.11).
 
 repos:
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.6.0
+    hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
+
   - repo: https://github.com/psf/black
-    rev: 24.8.0
-    hooks: [{id: black}]
+    rev: 24.1.0
+    hooks:
+      - id: black
+        args: ["--line-length=88"]
+        language_version: python3.10
+
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+        args: ["--profile=black"]
+        language_version: python3.10
+
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.6.9
-    hooks: [{id: ruff, args: ["--fix"]}]
+    rev: v0.1.0
+    hooks:
+      - id: ruff
+        args: ["--fix"]
+        language_version: python3.10
+
+  - repo: https://github.com/PyCQA/flake8
+    rev: 6.0.0
+    hooks:
+      - id: flake8
+        args: ["--max-line-length=88"]
+        language_version: python3.10
+
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.11.2
-    hooks: [{id: mypy}]
+    rev: v1.5.1
+    hooks:
+      - id: mypy
+        args: ["--ignore-missing-imports"]
+        language_version: python3.10
+
+  - repo: https://github.com/pyupio/safety
+    rev: v1.10.3
+    hooks:
+      - id: safety
+        files: ^requirements.*\.txt$
+        args: ["--full-report"]
