--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,16 @@
 {
   "version": "0.2.0",
   "configurations": [
-    {
-      "name": "FastAPI: Uvicorn",
-      "type": "python",
-      "request": "launch",
-      "module": "uvicorn",
-      "args": ["main:app", "--reload", "--port", "8000"],
-      "jinja": true
-    }
+	{
+	  "name": "Python: Current File",
+	  "type": "debugpy",
+	  "request": "launch",
+	  "program": "${file}",
+	  "console": "integratedTerminal",
+	  "justMyCode": true,
+	  "env": {
+		"PYTHONPATH": "${workspaceFolder}"
+	  }
+	}
   ]
 }
