--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,37 +1,141 @@
+
 [build-system]
-requires = ["setuptools>=68", "wheel"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "decoyable-oss"
+name = "decoyable"
 version = "0.1.0"
-description = "Big tech style OSS cybersecurity toolkit"
-authors = [{name="Decoyable Maintainers"}]
+description = "Enterprise-grade cybersecurity scanning tool for secrets, dependencies, and vulnerabilities"
 readme = "README.md"
-requires-python = ">=3.11"
-dependencies = [
-    "typer>=0.12.5",
-    "rich>=13.7.1",
-    "fastapi>=0.111.0",
-    "uvicorn>=0.30.0",
-    "pydantic>=2.8.2",
-    "python-dotenv>=1.0.1",
+requires-python = ">=3.8"
+license = { text = "MIT" }
+authors = [
+    { name = "Your Name", email = "you@example.com" }
 ]
-
-[project.optional-dependencies]
-dev = [
-    "pytest>=8.3.2",
-    "pytest-cov>=5.0.0",
-    "mypy>=1.11.2",
-    "ruff>=0.6.9",
-    "black>=24.8.0",
-    "pip-audit>=2.7.3",
-    "pre-commit>=3.8.0",
+dependencies = [
+    "fastapi>=0.104.0",
+    "uvicorn[standard]>=0.24.0",
+    "pydantic>=2.5.0",
+    "python-multipart>=0.0.6",
+    "aiofiles>=23.2.1",
+    "jinja2>=3.1.2",
+    "python-jose[cryptography]>=3.3.0",
+    "passlib[bcrypt]>=1.7.4",
+    "python-decouple>=3.8",
+    "requests>=2.31.0",
+    "click>=8.1.7",
+    "rich>=13.7.0",
+    "pyyaml>=6.0.1",
+    "cryptography>=41.0.7",
+    "bandit>=1.7.6",
+    "safety>=2.3.5",
+    "pip-audit>=2.7.0",
+    "pytest>=7.4.3",
+    "pytest-cov>=4.1.0",
+    "pytest-asyncio>=0.21.1",
+    "httpx>=0.25.2",
+    "docker>=6.1.3",
+    "celery>=5.3.0",
+    "redis>=4.5.0",
 ]
 
 [project.scripts]
-ogu = "decoyable.core.cli:get_app"
+decoyable = "main:main"
 
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["decoyable*"]
+[tool.black]
+line-length = 88
+target-version = ["py38", "py39", "py310", "py311", "py312"]
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  # directories
+  \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 88
+known_first_party = ["decoyable"]
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+
+[tool.mypy]
+python_version = "3.8"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+strict_equality = true
+show_error_codes = true
+files = ["decoyable", "main.py", "tests"]
+
+[[tool.mypy.overrides]]
+module = "tests.*"
+ignore_errors = true
+
+[tool.ruff]
+target-version = "py38"
+line-length = 88
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "UP", # pyupgrade
+]
+ignore = [
+    # Allow non-abstract empty methods in abstract base classes
+    "B027",
+    # Allow boolean positional values in function calls, like `dict.get(... True)`
+    "FBT003",
+    # Ignore checks for possible passwords
+    "S105", "S106", "S107",
+    # Ignore complexity
+    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
+]
+unfixable = [
+    # Don't touch unused imports
+    "F401",
+]
+
+[tool.ruff.isort]
+known-first-party = ["decoyable"]
+
+[tool.ruff.per-file-ignores]
+"tests/**/*" = ["S101", "PLR2004"]
+"__init__.py" = ["F401"]
+
+[tool.pytest.ini_options]
+minversion = "7.4"
+addopts = "-ra -q --strict-markers --strict-config --cov=decoyable --cov-report=term-missing --cov-report=xml"
+testpaths = ["tests"]
+python_files = "test_*.py"
+python_classes = "Test*"
+python_functions = "test_*"
+markers = [
+    "unit: Unit tests",
+    "integration: Integration tests",
+    "slow: Slow running tests",
+    "security: Security related tests",
+]
