✅ Commands Verification & Documentation Update
🔧 Fixed Issues:
- Fix CLI entry point in pyproject.toml (decoyable.core.main:main)
- Correct API endpoints to use /api/v1/ prefix
- Fix vulnerability object access in CLI service
- Update all command examples with verified working paths

📖 Documentation Enhancements:
- Add comprehensive 'Complete Usage Guide' to README
- Update command.txt with 100% verified commands
- Add CLI, API, Docker, and testing examples
- Include PyPI installation and development setup
- Create COMMANDS_VERIFICATION.md with full audit report

✅ All Commands Tested & Working:
- PyPI installation: pip install decoyable -> decoyable scan all
- FastAPI server: uvicorn decoyable.api.app:app --reload
- API endpoints: /api/v1/health, /api/v1/scan/*
- Docker deployment: docker-compose up -d
- CLI scanning with fix recommendations

🚀 Ready for PyPI v1.0.1 release with perfect documentation!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,7 +74,7 @@ Issues = "https://github.com/Kolerr-Lab/supper-decoyable/issues"
 Changelog = "https://github.com/Kolerr-Lab/supper-decoyable/blob/main/CHANGELOG.md"
 
 [project.scripts]
-decoyable = "decoyable.core.cli:main"
+decoyable = "decoyable.core.main:main"
 
 [tool.black]
 line-length = 120
